graphql-ws version of the server, used to test subscriptions for graphql-ws"

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.18.2"
+    "apollo-server": "^2.18.2",
+    "graphql-ws": "^5.5.5"
   }
 }
